# voice-ai-agent

./: .env.prod.example  .gitignore  Procfile  README.md  address_service.py  agents_api_example.py  appointment_service.py  config.py  email_service.py  env.dev.example  env.example  env.prod.example  main.py  models.py  openai_service.py  pyproject.toml  requirements.txt  routes.py  sbom-spdx-example-timxor_voice-ai-agent_3c7aa1.json  utils.py  websocket_handler.py
.github/workflows/: release.yml
src/: server.py
src/routes/: twilio.py
versions_history/: broken-codec-main.py  v1_working_voice_main.py  v2.2_main.py  v2_broken_but_deployed_main.py  v3.1_main.py  v3_working_name_phone_number.py
versions_history/v2/: call_state.py  config.py  endpoints.py  main.py  openai_client.py  openai_sender.py  twilio_stream.py
